# deccan-throwdown

./: README.md  docker-compose.initial.yaml  docker-compose.yaml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: exceptions.py  main.py  schemas.py  settings.py
backend/app/apikey_auth/: core.py  dependencies.py
backend/app/athletes/: models.py  schemas.py  views.py
backend/app/database/: base.py  core.py  dependencies.py  exceptions.py
backend/app/even_scoring_tables/: constants.py  models.py
backend/app/events/: models.py  schemas.py  views.py
backend/app/firebase_auth/: dependencies.py  exceptions.py  schemas.py  views.py
backend/app/scores/: models.py  schemas.py  service.py  views.py
backend/app/teams/: models.py  schemas.py  views.py
backend/app/user_auth/: core.py  dependencies.py  models.py  schemas.py  views.py
backend/app/wods/: models.py  schemas.py  views.py
frontend/: .gitignore  IMAGE_GALLERY_README.md  angular.json  ionic.config.json  ng-openapi-gen.json  package-lock.json  package.json
frontend/public/: manifest.webmanifest
frontend/scripts/: generate-image-list.js
frontend/src/: global.scss  index.html  main.ts
frontend/src/app/: app.component.html  app.component.ts  app.routes.ts
frontend/src/app/api/: api.module.ts  models.ts  services.ts
frontend/src/assets/: image-list.json
frontend/src/environments/: environment.prod.ts  environment.ts
frontend/src/theme/: variables.scss
nginx/: nginx-initial.conf  nginx.conf
scripts/: backup-db.sh  init-ssl.sh  renew-ssl.sh
(+235 files in other folders)
